receive massage and save to db

--- a/templates/home.html
+++ b/templates/home.html
@@ -30,8 +30,8 @@
     {%include 'myproject.html'%}
     {% endfor %}
   </div>
-    <div>
-  <button> Contact Us</button>
+    <div class="text-center">
+        <a href="/contactus" type="button" class="btn btn-primary btn-lg"> Contact Us</a>
       <p> copy right , {{myname}}</p> 
   </div>
     </div>
