--- a/templates/myproject.html
+++ b/templates/myproject.html
@@ -6,5 +6,6 @@
   <div><b>skills:</b>{{m ['details']}}</div>
   </div>
 <div class="col-3">
-<button type="button" class="btn btn-dark">Details</button>
+<a href="/projects/{{m['id']}}" type="button" class="btn btn-dark">Details</a>
+  
   </div>
