--- a/templates/home.html
+++ b/templates/home.html
@@ -1,26 +1,16 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"> 
-    <title> {{myname}} </title>
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> 
-    <style>
-      
-      #banner{
-        width: 100%;
-        height: 360px;
-        object-fit:cover;
-      }
-      
-      
-    </style>
-  </head>
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>{{myname}} Project</title> 
+    {%include 'bootstrab.html'%}
+    </head>  
+  <body>
 
-<body> 
   <div class="container">
   <h1 class="text-center "> My first project </h1>
-  <img id="banner" src='https://images.unsplash.com/photo-1553484604-9f524520c793?ixlib=rb-4.0.3&q=85&fm=jpg&crop=entropy&cs=srgb&dl=capdfrawy-ksVq_Mv-Q-0-unsplash.dev/static/banner.jpg' height = '320'>
+  {% include 'banner.html' %}
   <h2 class="text-center " > about {{myname}}</h2>
   <div>  It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
   </div>
