--- a/templates/projectdetails.html
+++ b/templates/projectdetails.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{project.project_name}}</title>
+    <title>{{project.project_name} </title>
+    {% include 'bootstrab.html' %}
   </head>
   <body>
+    {% include 'banner.html' %}
     <h3>Details</h3>
 <p>{{project.details}}</p>
     <h3> Project Descriptions</h3>
