fix error in details botton

--- a/templates/projectdetails.html
+++ b/templates/projectdetails.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{project.project_name} </title>
+    <title>{{project.project_name}} </title>
     {% include 'bootstrab.html' %}
   </head>
   <body>
