--- a/templates/myproject.html
+++ b/templates/myproject.html
@@ -1,14 +1,12 @@
-
-<div class="border-bottom row" style = "margin-bottom : 16px;padding_bottom:8px;">
-  
-  <div class ="col-9">
-  <h4 style = "color:rgb(120,120,120) ; margin-bottom:4px;">
-    {{m['project_name']}}
-  </h4>
-  <div><b>skills:</b>{{m['details']}}</div>
-  </div>
-<div class="col-3">
-<a href="/projects/{{m['id']}}" type="button" class="btn btn-dark">Details</a>
-  
+  <div class="border-bottom row" style = "margin-bottom: 16px; padding_botton: 8px;">
+    <div class="col-10">
+      <h4 style="color:rgb(120,120,120) ; margin-bottom:4px;">
+        {{m ['project_name'] }} </h4>
+      <div><b>Skills: </b>{{ m ['details'] }}</div>
+    </div>
+      <div class="col-2">
+    <a href="/projects/{{m['id']}}" type="button" class="btn btn-dark">Details</a>
+    </div>
   </div>
   
+ 
